First Menu implementation -with game mode instancing etc.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,13 +5,13 @@ GameName=oce_game_jam_two
 EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap.TopDownExampleMap
 LocalMapOptions=
 TransitionMap=None
-bUseSplitscreen=False
+bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap.TopDownExampleMap
+GameInstanceClass=/Game/Blueprints/MasterGameInstance.MasterGameInstance_C
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
 GlobalDefaultServerGameMode=None
