--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=oce_game_jam_two
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap.TopDownExampleMap
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,11 +10,11 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/Blueprints/MasterGameInstance.MasterGameInstance_C
+GameInstanceClass=/Game/Blueprints/Gameplay/GlobalGameInstance.GlobalGameInstance_C
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
-GlobalDefaultServerGameMode=None
+GlobalDefaultGameMode=/Game/Blueprints/Gameplay/MainMenu_GameMode.MainMenu_GameMode_C
+GlobalDefaultServerGameMode=/Game/Blueprints/Gameplay/Game_GameMode.Game_GameMode_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
