--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -178,3 +178,6 @@ r.LightPropagationVolume=False
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.Banrey.[PROJECT]
+
