--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -181,3 +181,6 @@ bExplicitCanvasChildZOrder=True
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.Banrey.[PROJECT]
 
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconPortalPath=(Path="")
+
